test/typeerrors/Edinburgh/Ex15.hs
module Ex15 where

test = \x -> if x then x+1 else x-2.2
